# gated-semantic-cache

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  semantic_cache_redesign_for_cursor.md  structured_exact_required_design_note.md
.cursor/rules/: semantic-cache-direction.mdc
docs/: TODO.md  banking_adversarial_report.json  banking_adversarial_report_full100.json  banking_semantic_duplicate_probe.json  blog_draft.md  cli_user_guide.md  eval_summary_report.md  first_milestone_report.md  ibm_mtrag_rows_201_240_independent_report.json  implementation_contract.md  legacy_eval_asset_map.md  public_python_api_plan.md  routing_benchmark_report.json  routing_classifier.pkl  routing_error_analysis.json  routing_error_analysis.md  routing_label_policy.md  shadow_compare_report.json  structured_exact_benchmark_report.json  structured_exact_poc_report.md  todos_from_gptcache.md
docs/finance_pairs_eval/: finance_adversarial_comparison.md  finance_adversarial_honest_judge-on.json  finance_adversarial_vector-only.json
docs/queries_pairs_eval/: queries_pairs_comparison.md  queries_pairs_honest_judge-on.json  queries_pairs_semantic_ok_judge-on.json  queries_pairs_vector-only.json
docs/quora_pairs_eval/: quora_pairs_200_seed42_judge-on_baseline.json  quora_pairs_200_seed42_no-judge_baseline.json  quora_pairs_200_seed42_vector-only.json  quora_pairs_200_seed43_judge-on.json  quora_pairs_200_seed43_no-judge.json  quora_pairs_200_seed43_vector-only.json  quora_pairs_200_seed44_judge-on.json  quora_pairs_200_seed44_no-judge.json  quora_pairs_200_seed44_vector-only.json  (+10 more)
gatecache/: __init__.py  __main__.py  api.py  cli.py
gated_semantic_cache/: __init__.py  __main__.py  api.py  cli.py
tests/: queries.txt  queries_and_results.txt  test_adversarial_cache_eval.py  test_banking_adversarial_eval.py  test_challenge_dispute_routing.py  test_cli.py  test_datasets.py  test_langchain_cache.py  test_legacy_eval_regression.py  test_llm_judge.py  test_novel_eval.py  test_offline_benchmark.py  test_pipeline.py  test_public_api.py  test_queries_pairs_eval.py  test_queries_regression.py  test_queries_regression_report.py  test_query_facets.py  test_quora_pairs_eval.py  test_routing_classifier.py  test_routing_resolve.py  test_sqlite_cache.py  test_structured_exact.py  test_structured_extract_eval.py  test_structured_reuse_gate.py  test_tech_tokens_routing.py
(+132 files in other folders)
