[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatecache"
version = "0.1.0"
description = "Multi-gate semantic cache: exact match, routing classifier, scoped ANN retrieval, structured gates, and bounded gray-zone judge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jags Ramnarayan" }]
keywords = ["semantic-cache", "llm", "caching", "embeddings", "faiss"]
dependencies = [
  "numpy>=1.26.0",
  "faiss-cpu>=1.8.0",
  "scikit-learn>=1.5.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
gatecache = "gatecache.cli:main"

[tool.setuptools]
packages = [
  "gatecache",
  "gatecache.cache",
  "gatecache.eval",
  "gatecache.models",
  "gatecache.observability",
  "gatecache.routing",
  "gatecache.serving",
  "gatecache.embeddings",
  "gatecache.structured_exact",
  "gatecache.structured_exact.extractors",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
