[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gated-semantic-cache"
version = "0.1.0"
description = "Multi-gate semantic cache: exact match, routing classifier, scoped ANN retrieval, structured gates, and bounded gray-zone judge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jags Ramnarayan" }]
keywords = ["semantic-cache", "llm", "caching", "embeddings", "faiss"]
dependencies = [
  "numpy>=1.26.0",
  "faiss-cpu>=1.8.0",
  "scikit-learn>=1.5.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
gated-semantic-cache = "gated_semantic_cache.cli:main"

[tool.setuptools]
packages = [
  "gated_semantic_cache",
  "gated_semantic_cache.cache",
  "gated_semantic_cache.eval",
  "gated_semantic_cache.models",
  "gated_semantic_cache.observability",
  "gated_semantic_cache.routing",
  "gated_semantic_cache.serving",
  "gated_semantic_cache.embeddings",
  "gated_semantic_cache.structured_exact",
  "gated_semantic_cache.structured_exact.extractors",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
